deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        # Configure the docker image you just pushed to your repository here
        - image: ly95487532/ui5demo1:latest
          name: my-app
          imagePullPolicy: Always
          resources:
            requests:
              memory: '1Gi'
              cpu: '500m'
            limits:
              memory: '1.5Gi'
              cpu: '750m'
          # Volume mounts needed for injecting BTP service credentials
          volumeMounts:
      imagePullSecrets:
        # In case your repository requires a login, reference your secret here
        - name: ly880912
      # Volumes containing BTP serice credentials from secrets
      volumes:
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: my-app
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 1336
  selector:
    app: my-app
