ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-router
  namespace: default
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
  # cert.gardener.cloud/purpose: managed
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - "a2938f886c5974abb8b6f7ebb624822c-763248032.eu-west-1.elb.amazonaws.com"
    # secretName: secret-tls
  rules:
    - host: 'a2938f886c5974abb8b6f7ebb624822c-763248032.eu-west-1.elb.amazonaws.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app
                port:
                  number: 1336
